# Am-I-audible

./: .gitignore  Makefile  README.md  fixes.txt  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: release.yml
packaging/appimage/: build.sh
packaging/deb/: build.sh
src/am_i_audible/: __init__.py  __main__.py  cli.py  config.py  jobs.py
src/am_i_audible/audio/: __init__.py  backends.py  diarize.py  engines.py  recorder.py  router.py  transcribe.py
src/am_i_audible/core/: __init__.py  controller.py  session.py
src/am_i_audible/ui/: __init__.py  meters.py
src/am_i_audible/web/: __init__.py  server.py
src/am_i_audible/web/static/: app.js  index.html  style.css
tests/: test_router.py  test_transcribe.py
