[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "am-i-audible"
version = "1.6.0"
description = "Linux-native dual-audio capture + transcription pipeline for meetings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.4.7",
    "soundfile>=0.12.1",
    "numpy>=1.26",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12",
]

[project.optional-dependencies]
stt = ["faster-whisper>=1.0", "soxr>=0.3"]
gpu = ["nvidia-cublas-cu12", "nvidia-cudnn-cu12"]
diarize = ["pyannote.audio>=3.1"]
app = ["pywebview>=5.0"]

[project.scripts]
listen = "am_i_audible.web.server:main"
am-i-audible = "am_i_audible.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
am_i_audible = ["web/static/*"]
